add MVC more system

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -248,21 +248,27 @@
     <Compile Include="Assets\Scripts\Audio\AudioModel.cs" />
     <Compile Include="Assets\Scripts\Audio\AudioView.cs" />
     <Compile Include="Assets\Scripts\CharacterController.cs" />
-    <Compile Include="Assets\Scripts\HeadposeCanvas.cs" />
+    <Compile Include="Assets\Scripts\FloatingMenu\FloatingMenuController.cs" />
+    <Compile Include="Assets\Scripts\FloatingMenu\FloatingMenuFactory.cs" />
+    <Compile Include="Assets\Scripts\FloatingMenu\FloatingMenuModel.cs" />
+    <Compile Include="Assets\Scripts\FloatingMenu\FloatingMenuView.cs" />
     <Compile Include="Assets\Scripts\MainManager.cs" />
+    <Compile Include="Assets\Scripts\NrealInput\NrealInputController.cs" />
+    <Compile Include="Assets\Scripts\NrealInput\NrealInputFactory.cs" />
+    <Compile Include="Assets\Scripts\NrealInput\NrealInputView.cs" />
     <Compile Include="Assets\Scripts\State\StateController.cs" />
     <Compile Include="Assets\Scripts\State\StateFactory.cs" />
     <Compile Include="Assets\Scripts\State\StateModel.cs" />
     <Compile Include="Assets\Scripts\State\StateView.cs" />
-    <Compile Include="Assets\Scripts\StateProcessor.cs" />
     <Compile Include="Assets\Scripts\Text\ExplainTextController.cs" />
     <Compile Include="Assets\Scripts\Text\ExplainTextFactory.cs" />
     <Compile Include="Assets\Scripts\Text\TextIndicatorView.cs" />
     <Compile Include="Assets\Scripts\Text\TextModel.cs" />
     <Compile Include="Assets\Scripts\Text\TextView.cs" />
-    <Compile Include="Assets\Scripts\UILookUser.cs" />
-    <Compile Include="Assets\Scripts\Utility.cs" />
-    <Compile Include="Assets\Scripts\Vignette.cs" />
+    <Compile Include="Assets\Scripts\Tools\HeadposeCanvas.cs" />
+    <Compile Include="Assets\Scripts\Tools\UILookUser.cs" />
+    <Compile Include="Assets\Scripts\Tools\Utility.cs" />
+    <Compile Include="Assets\Scripts\Tools\Vignette.cs" />
     <Compile Include="Assets\VacuumShaders\Advanced Dissolve\Scripts\Controller_Cutout.cs" />
     <Compile Include="Assets\VacuumShaders\Advanced Dissolve\Scripts\Controller_Edge.cs" />
     <Compile Include="Assets\VacuumShaders\Advanced Dissolve\Scripts\Controller_Mask_Box.cs" />
